--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -362,6 +362,38 @@ function renderResults(data) {
   });
 }
 </script>
+<!-- Contenedor responsivo para tu anuncio -->
+<div class="ad-responsive">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '928fb23c16df73b9511fd9978cee9c9d',
+      'format' : 'iframe',
+      'height' : 90,
+      'width' : 728,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/928fb23c16df73b9511fd9978cee9c9d/invoke.js"></script>
+</div>
 
+<style>
+/* Contenedor que mantiene la proporción del anuncio y se hace responsivo */
+.ad-responsive {
+  position: relative;
+  width: 100%;
+  max-width: 728px; /* tamaño original máximo */
+  height: 0;
+  padding-bottom: calc(90 / 728 * 100%); /* relación de aspecto 728x90 */
+}
+
+/* Ajustamos el iframe generado por el script */
+.ad-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+</style>
 </body>
 </html>
