--- a/Peliculas/movie10.html
+++ b/Peliculas/movie10.html
@@ -44,6 +44,7 @@
   gtag('config', 'G-PC9JETB0VP');
 </script>
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
+	<script type='text/javascript' src='//pl27846323.effectivegatecpm.com/03/f0/2f/03f02f1f55670f6954e4b19e5f82cc36.js'></script>
 </head>
 <body class="text-white font-sans">
     <div class="overlay min-h-screen">
@@ -88,6 +89,8 @@
                 <h4 class="text-white text-lg font-semibold mb-2">Sinopsis</h4>
                 <p class="text-gray-300 text-sm leading-relaxed">La joven y peculiar Louisa «Lou» Clark pasa de un empleo a otro para ayudar a mantener a su familia. Su alegre actitud se pone a prueba cuando ella se convierte en proveedor de cuidados para Will Traynor, un joven y adinerado banquero que quedó paralizado en un accidente dos años atrás. La perspectiva cínica de Will comienza a cambiar cuando Louisa le muestra que vale la pena vivir. Conforme se fortalece su vínculo, sus vidas y corazones cambian en maneras que ninguno de los dos jamás hubiera imaginado.</p>
             </div>
+			<script async="async" data-cfasync="false" src="//pl27846147.effectivegatecpm.com/e40141178b5082ef8dd01a89a8e199ec/invoke.js"></script>
+<div id="container-e40141178b5082ef8dd01a89a8e199ec"></div>
         </div>
     </div>
     <script>
@@ -152,6 +155,39 @@
             <span>Buscar</span>
         </a>
     </nav>
+	<!-- Contenedor responsivo para tu anuncio -->
+<div class="ad-responsive">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '928fb23c16df73b9511fd9978cee9c9d',
+      'format' : 'iframe',
+      'height' : 90,
+      'width' : 728,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/928fb23c16df73b9511fd9978cee9c9d/invoke.js"></script>
+</div>
+
+<style>
+/* Contenedor que mantiene la proporción del anuncio y se hace responsivo */
+.ad-responsive {
+  position: relative;
+  width: 100%;
+  max-width: 728px; /* tamaño original máximo */
+  height: 0;
+  padding-bottom: calc(90 / 728 * 100%); /* relación de aspecto 728x90 */
+}
+
+/* Ajustamos el iframe generado por el script */
+.ad-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+</style>
 </body>
 </html>
 
