--- a/Peliculas/movie10.html
+++ b/Peliculas/movie10.html
@@ -22,6 +22,24 @@
             display: flex;
             flex-direction: column;
         }
+
+		/* Contenedor que mantiene la proporción del anuncio y se hace responsivo */
+.ad-responsive {
+  position: relative;
+  width: 100%;
+  max-width: 728px; /* tamaño original máximo */
+  height: 0;
+  padding-bottom: calc(90 / 728 * 100%); /* relación de aspecto 728x90 */
+}
+
+/* Ajustamos el iframe generado por el script */
+.ad-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
     </style>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
     <script>
@@ -52,10 +70,24 @@
             <div class="rounded-md overflow-hidden relative aspect-video bg-black">
                 <iframe class="w-full h-full" src="https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9odWdoLmNkbi5ydW1ibGUuY2xvdWQvdmlkZW8vczgvMi85L3MvOS9NLzlzOU1zLmFhYS5tcDQ=&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvM1dLN3A5RWRabW12QjFJYkIyVnc5UmY0bFhILmpwZw==&title=WW8gQW50ZXMgZGUgVGk=" data-alternativo="https://streamwish.to/e/xpkrfj9xkk90" title="" frameborder="0" allowfullscreen></iframe>
             </div>
+				<!-- Contenedor responsivo para tu anuncio -->
+<div class="ad-responsive">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '928fb23c16df73b9511fd9978cee9c9d',
+      'format' : 'iframe',
+      'height' : 90,
+      'width' : 728,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/928fb23c16df73b9511fd9978cee9c9d/invoke.js"></script>
+</div>
             <div class="flex space-x-4 mt-4 bg-[#1a1a1a] p-4 rounded-md items-center">
                 <div class="flex items-center justify-center w-[110px] h-[160px] flex-shrink-0">
                     <img alt="Yo Antes de Ti" class="rounded-lg w-full h-full object-cover" src="https://image.tmdb.org/t/p/original/vVIDt9FjuTLbXeuc2mJRYnqMh1F.jpg" />
                 </div>
+				
                 <div class="flex-1">
                     <h3 class="text-xl font-semibold">Yo Antes de Ti</h3>
                     <p class="text-gray-300 italic text-sm">Publicado por: Lz-1</p>
@@ -85,12 +117,23 @@
                     <i class="fas fa-download"></i>
                 </button>
             </div>
+				<!-- Contenedor responsivo para tu anuncio -->
+<div class="ad-responsive">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '928fb23c16df73b9511fd9978cee9c9d',
+      'format' : 'iframe',
+      'height' : 90,
+      'width' : 728,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/928fb23c16df73b9511fd9978cee9c9d/invoke.js"></script>
+</div>
             <div id="sinopsis" class="mt-4 bg-[#1a1a1a] p-4 rounded-md">
                 <h4 class="text-white text-lg font-semibold mb-2">Sinopsis</h4>
                 <p class="text-gray-300 text-sm leading-relaxed">La joven y peculiar Louisa «Lou» Clark pasa de un empleo a otro para ayudar a mantener a su familia. Su alegre actitud se pone a prueba cuando ella se convierte en proveedor de cuidados para Will Traynor, un joven y adinerado banquero que quedó paralizado en un accidente dos años atrás. La perspectiva cínica de Will comienza a cambiar cuando Louisa le muestra que vale la pena vivir. Conforme se fortalece su vínculo, sus vidas y corazones cambian en maneras que ninguno de los dos jamás hubiera imaginado.</p>
             </div>
-			<script async="async" data-cfasync="false" src="//pl27846147.effectivegatecpm.com/e40141178b5082ef8dd01a89a8e199ec/invoke.js"></script>
-<div id="container-e40141178b5082ef8dd01a89a8e199ec"></div>
         </div>
     </div>
     <script>
@@ -169,25 +212,6 @@
   <script type="text/javascript" src="//www.highperformanceformat.com/928fb23c16df73b9511fd9978cee9c9d/invoke.js"></script>
 </div>
 
-<style>
-/* Contenedor que mantiene la proporción del anuncio y se hace responsivo */
-.ad-responsive {
-  position: relative;
-  width: 100%;
-  max-width: 728px; /* tamaño original máximo */
-  height: 0;
-  padding-bottom: calc(90 / 728 * 100%); /* relación de aspecto 728x90 */
-}
-
-/* Ajustamos el iframe generado por el script */
-.ad-responsive iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100% !important;
-  height: 100% !important;
-}
-</style>
 </body>
 </html>
 
