--- a/index.html
+++ b/index.html
@@ -460,44 +460,56 @@ document.addEventListener("DOMContentLoaded", async () => {
   });
 </script>
 <footer class="bg-[#081423] text-white mt-12">
-  <div class="max-w-6xl mx-auto px-4 py-8 grid grid-cols-1 sm:grid-cols-3 gap-6">
+  <div class="max-w-6xl mx-auto px-4 py-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
     
     <!-- Logo y descripción -->
     <div class="flex flex-col items-start gap-3">
       <h2 class="text-2xl font-bold tracking-tight">LzPlay</h2>
       <p class="text-sm text-white/70">Tu plataforma de streaming para películas y series.</p>
-		 <p>EL CONTENIDO MOSTRADO NO SE ALOJA EN NUESTROS DOMINIOS Y PROVIENEN DE SITIOS DE TERCEROS...</p>
+      <p class="text-xs text-white/50 leading-relaxed">
+        EL CONTENIDO MOSTRADO NO SE ALOJA EN NUESTROS DOMINIOS Y PROVIENE DE SITIOS DE TERCEROS...
+      </p>
     </div>
 
     <!-- Enlaces rápidos -->
     <div class="flex flex-col gap-2">
-      <h3 class="font-semibold text-sm">Enlaces de apoyo</h3>
-      <a href="https://www.paypal.com/paypalme/LzRdrgz" class="text-white/70 hover:text-yellow-400 transition text-sm">PayPal </a>
+      <h3 class="font-semibold text-sm uppercase tracking-wide">Enlaces de apoyo</h3>
+      <a href="https://www.paypal.com/paypalme/LzRdrgz" class="text-white/70 hover:text-yellow-400 transition text-sm">PayPal</a>
       <a href="https://ko-fi.com/lzplay_oficial" class="text-white/70 hover:text-yellow-400 transition text-sm">Ko-Fi</a>
     </div>
 
     <!-- Redes sociales -->
-<div class="flex flex-col gap-2">
-  <h3 class="font-semibold text-sm">Redes Sociales</h3>
-  <div class="flex gap-3 mt-1">
-	  <a href="https://www.tiktok.com/@lzplay.oficial?_t=ZM-8zgdKXGBEiU&_r=1" class="text-white/70 hover:text-black transition">
-      <i class="fab fa-tiktok"></i>
-    </a>
-	   <a href="https://chat.whatsapp.com/DvrXOjWqJTPGYDT1KhASPR?mode=ems_copy_t" class="text-white/70 hover:text-green-500 transition">
-      <i class="fab fa-whatsapp"></i>
-    </a>
-	  <a href="https://whatsapp.com/channel/0029Vb9UGsTH5JLv7mp1Ry37" class="text-white/70 hover:text-pink-500 transition">
-      <i class="fab fa-whatsapp"></i>
-    </a>
-    <a href="https://www.facebook.com/share/18tPrkMCpq/?mibextid=wwXIfr" class="text-white/70 hover:text-blue-500 transition">
-      <i class="fab fa-facebook-f"></i>
-    </a>
-    <a href="https://dlz.blogdepelis.lat/" class="text-white/70 hover:text-blue-600 transition">
-      <i class="fas fa-download"></i>
-    </a>
-  </div>
-</div>
+    <div class="flex flex-col gap-2">
+      <h3 class="font-semibold text-sm uppercase tracking-wide">Redes Sociales</h3>
+      <div class="flex gap-4 mt-1 flex-wrap">
+        <a href="https://www.tiktok.com/@lzplay.oficial?_t=ZM-8zgdKXGBEiU&_r=1" class="text-white/70 hover:text-black transition text-lg">
+          <i class="fab fa-tiktok"></i>
+        </a>
+        <a href="https://chat.whatsapp.com/DvrXOjWqJTPGYDT1KhASPR?mode=ems_copy_t" class="text-white/70 hover:text-green-500 transition text-lg">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://whatsapp.com/channel/0029Vb9UGsTH5JLv7mp1Ry37" class="text-white/70 hover:text-pink-500 transition text-lg">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://www.facebook.com/share/18tPrkMCpq/?mibextid=wwXIfr" class="text-white/70 hover:text-blue-500 transition text-lg">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://dlz.blogdepelis.lat/" class="text-white/70 hover:text-blue-600 transition text-lg">
+          <i class="fas fa-download"></i>
+        </a>
+      </div>
+    </div>
 
+    <!-- Creadores -->
+    <div class="flex flex-col gap-2">
+      <h3 class="font-semibold text-sm uppercase tracking-wide">Creadores</h3>
+      <p class="text-sm"><span class="text-green-400 font-semibold">Jose Lagos</span></p>
+      <p class="text-sm"><span class="text-yellow-400 font-semibold">Leoshin</span></p>
+      <p class="text-sm"><span class="text-purple-400 font-semibold">Blogdepelis</span></p>
+      <p class="text-sm font-semibold">
+        <span class="text-white">Lz</span><span class="text-red-500">Play</span>
+      </p>
+    </div>
 
   </div>
 
@@ -505,6 +517,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     &copy; 2025 LzPlay. Todos los derechos reservados.
   </div>
 </footer>
+
 <script>
 // Función auxiliar para sanitizar cadenas HTML
 function sanitizeHTML(str) {
@@ -785,12 +798,3 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
