--- a/HOME/login.html
+++ b/HOME/login.html
@@ -149,7 +149,7 @@ button {
   .edit-icon { width: 22px; height: 22px; font-size: 11px; }
 }
 </style>
- <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -158,6 +158,8 @@ button {
 
   gtag('config', 'G-PC9JETB0VP');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5488063407481298"
+     crossorigin="anonymous"></script>
 </head>
 <body class="flex flex-col justify-center items-center min-h-screen relative">
 
@@ -183,7 +185,7 @@ button {
     <button id="btnCompartir" class="border-accent w-full" aria-label="Compartir LZPLAY">Compartir</button>
   </div>
 </main>
-<script type='text/javascript' src='//pl27846323.effectivegatecpm.com/03/f0/2f/03f02f1f55670f6954e4b19e5f82cc36.js'></script>
+
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const nombreUsuario = document.getElementById('nombreUsuario');
