--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Juego sucio -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Hiroshima -->
+<li>
+  <a href="../Peliculas/movie97.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/t2FOHUskwxmdAQerqvijUlpeZ1N.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Hiroshima 1983</span>
+    <span class="hidden">Una poderosa declaración contra la guerra, Hiroshima es una historia sobre el efecto de la bomba atómica sobre la vida de un niño y la vida del pueblo japonés.</span>
+  </a>
+</li>
+<!--FIN--><!-- Juego sucio -->
 <li>
   <a href="../Peliculas/movie96.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
