--- a/Peliculas/pelicula285.html
+++ b/Peliculas/pelicula285.html
@@ -25,7 +25,7 @@
 <div class="overlay min-h-screen">
   <div class="max-w-4xl mx-auto p-4 pb-24">
     <div class="rounded-md overflow-hidden relative aspect-video bg-black">
-      <iframe class="w-full h-full" src="https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9zOC8yL0wvay9aLzkvTGtaOW4uYWFhLm1wNA==&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvNlByOWJFQ2ZqNWs0S0lZbVQ3bnAweENYdDNVLmpwZw==&title=R2F0byBjb24gYm90YXM=" data-alternativo="https://streamwish.to/e/rjn34vbogeef" title="" frameborder="0" sandbox="allow-scripts allow-same-origin allow-presentation" allowfullscreen></iframe>
+      <iframe class="w-full h-full" src="https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9zOC8yL0wvay9aLzkvTGtaOW4uYWFhLm1wNA==&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvNlByOWJFQ2ZqNWs0S0lZbVQ3bnAweENYdDNVLmpwZw==&title=R2F0byBjb24gYm90YXM=" data-alternativo="https://1a-1791.com/video/s8/2/L/k/Z/9/LkZ9n.aaa.mp4" title="" frameborder="0" sandbox="allow-scripts allow-same-origin allow-presentation" allowfullscreen></iframe>
     </div>
     <div class="flex space-x-4 mt-4 bg-[#1a1a1a] p-4 rounded-md items-center">
       <div class="flex items-center justify-center w-[110px] h-[160px] flex-shrink-0">
