--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Exterminio: La evolucion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Trauma -->
+<li>
+  <a href="../Peliculas/movie119.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ugp2ugWI4Va8DKTuGZ2ry7YclIt.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Trauma 2017</span>
+    <span class="hidden">Cuatro amigas de paseo en una localidad rural del centro de Chile, son atacadas brutalmente por un hombre y su hijo. Tras no encontrar ayuda en la comunidad, deciden enfrentar a estos hombres con la ayuda de unos policías. Pero en este camino, descubrirán que sus atacantes, tienen en su sangre la herencia directa del período más oscuro de la historia chilena.</span>
+  </a>
+</li>
+<!--FIN--><!-- Exterminio: La evolucion -->
 <li>
   <a href="../Peliculas/movie118.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
