--- a/Categorias/cienciaficcion/index.html
+++ b/Categorias/cienciaficcion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Exterminio: La evolucion -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El laboratorio de Dexter: El viaje de Dexter -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie120.html">
+    <img src="https://image.tmdb.org/t/p/original/oiul6dw0tOkPW6EMPsZyLnvTqzA.jpg" alt="El laboratorio de Dexter: El viaje de Dexter" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El laboratorio de Dexter: El viaje de Dexter</div>
+  <div class="text-xs text-white/70">1999</div>
+</article><!-- Exterminio: La evolucion -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie118.html">
     <img src="https://image.tmdb.org/t/p/original/gc5oHGz2AugoAlnfsmie1I0ZdOM.jpg" alt="Exterminio: La evolución" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
