--- a/Plataforma/cartoonnetworks/index.html
+++ b/Plataforma/cartoonnetworks/index.html
@@ -199,7 +199,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El maravillosamente extrano mundo de Gumball -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El laboratorio de Dexter: El viaje de Dexter -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie120.html">
+    <img src="https://image.tmdb.org/t/p/original/oiul6dw0tOkPW6EMPsZyLnvTqzA.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El laboratorio de Dexter: El viaje de Dexter</div>
+  <div class="text-xs text-white/70">1999</div>
+</article><!-- El maravillosamente extrano mundo de Gumball -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie110.html">
     <img src="https://image.tmdb.org/t/p/original/zjon4kGt6L6mYu04fKVr0u07Fte.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
