--- a/Categorias/fantasia/index.html
+++ b/Categorias/fantasia/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Mascara 2: El hijo de la mascara -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La telarana de Charlotte -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie121.html">
+    <img src="https://image.tmdb.org/t/p/original/zI6O0Bf3BB3eSxp04Lkz0ficrvm.jpg" alt="La telaraña de Charlotte" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La telaraña de Charlotte</div>
+  <div class="text-xs text-white/70">2006</div>
+</article><!-- La Mascara 2: El hijo de la mascara -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie108.html">
     <img src="https://image.tmdb.org/t/p/original/pLR2dgaNuHVJcS5mgIHfpRzgYAB.jpg" alt="La Máscara 2: El hijo de la máscara" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
