--- a/CatergoriasBase/comedia/index.html
+++ b/CatergoriasBase/comedia/index.html
@@ -42,7 +42,15 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-  </style>
+  </style><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PC9JETB0VP');
+</script>
 </head>
 
 <body class="bg-[#04143B] text-white min-h-screen">
